# employee

./: .env  Dockerfile  alembic.ini  docker-compose-dev.yaml  docker-compose.yaml  docker-entrypoint.sh  local_run.py  main.py  pyproject.toml  requirements.txt  test_main.http
app/: __main__.py  functions.py  local_run.py  main.py
app/database/: database.py
app/environment/: environment.py
app/models/: __init__.py  employee.py  project.py
app/routers/: routers.py
app/schemas/: schemas.py
app/services/: employee_service.py
app/utils/: crud.py
database/: database.py
docker/: Dockerfile  docker-entrypoint.sh
environment/: environment.py
migration/: env.py
migration/versions/: 5661fd0d92a5_added_required_tables.py  569d9f60f703_added_required_tables.py  56fe7bd33f4a_added_required_tables.py  79b4c950068b_added_required_tables.py  adede4fc40a2_added_required_tables.py  b9ee71c37242_added_required_tables.py  bbf3f5c363b2_added_required_tables.py  bdd0e0d8e81a_added_required_tables.py  cad5cf3c1e1b_added_required_tables.py  ecf77031c326_added_required_tables.py
models/: database.py  employee.py
postgres/: Dockerfile
routers/: employee.py  routers.py
schemas/: employee.py  schemas.py
tests/: test.py
utils/: crud.py  employee.py
